---
source: crates/bitnet-opencl/tests/snapshot_tests.rs
expression: "kernels::QK256_GEMV_SOURCE"
---
__kernel void qk256_gemv(
    __global const uchar* packed_weights,
    __global const half*  scales,
    __global const float* input,
    __global float*       output,
    const uint seq_len,
    const uint n_out,
    const uint k)
{
    const uint gid = get_global_id(0);
    if (gid >= n_out) return;

    const uint blocks_per_row = k / 256;
    float acc = 0.0f;

    for (uint blk = 0; blk < blocks_per_row; ++blk) {
        const uint base = gid * blocks_per_row * 64 + blk * 64;
        half scale = scales[gid * blocks_per_row + blk];

        for (uint i = 0; i < 64; ++i) {
            uchar packed = packed_weights[base + i];
            for (uint j = 0; j < 4; ++j) {
                int w = ((packed >> (j * 2)) & 0x3) - 1;
                uint idx = blk * 256 + i * 4 + j;
                acc += (float)w * input[idx] * (float)scale;
            }
        }
    }
    output[gid] = acc;
}
